# Swappy

./: .env.example  .gitignore  API_REFERENCE.md  DEPLOYMENT_CHECKLIST.md  GIT_GUIDE.md  GOOGLE_OAUTH_SETUP.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP_GUIDE.md  START_HERE.md  SUCCESS.md  UI_FIXES_AND_ENHANCEMENTS.md  docker-compose.yml  env.example.txt  next.config.js  package-lock.json  package.json  pyproject.toml  setup.ps1  swappy.db  tailwind.config.ts  test_api.py  🎉_READY_TO_VIEW.md
apps/api/: main.py
apps/api/core/: config.py  database.py  security.py  storage.py
apps/api/models/: database.py  schemas.py
apps/api/routers/: auth.py  dashboard.py  projects.py  scoring.py  trends.py  uploads.py
apps/api/services/: scoring_engine.py  trend_service.py
apps/worker/: tasks.py
data/pipelines/: train_virality.py  trend_pipeline.py
infra/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker
prisma/: schema.prisma  seed.ts
scripts/: dev-api.mjs
services/feature_engine/: audio_features.py  image_features.py  metadata_features.py  text_features.py  trend_features.py
services/ml_inference/: explainer.py  pipeline.py  scorer.py
services/trend_ingestion/: processor.py  sources.py
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/signup/: page.tsx
src/app/explore/: page.tsx
src/components/providers/: Providers.tsx
src/components/three/: Card3D.tsx  FloatingArtifacts.tsx  Hero3D.tsx  ParticleField.tsx
src/lib/: auth.ts  storage.ts  utils.ts
src/lib/validations/: auth.ts  post.ts
src/types/: next-auth.d.ts
(+6 files in other folders)
